[Backend] - Tags Integration tests. Review issues fix